samples/errors/access_a_field_that_does_not_exist.opal
(type Point ( (:x ~ Int) (:y ~ Int) ))

(let main {} (let [val  (Point :x 10 :y 13) val2 (:g val)]))
